--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,6 @@ h3 {
     color: white;
     margin: 0;
     font-weight: 400;
-    width: 20rem;
     padding-top: 0.3em;
 }
 
@@ -477,30 +476,29 @@ button {
     margin-top: .2em;
 }
 
-.verhalenSection {
-    /* display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap; */
-}
-
 .verhalenSection ul {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
-    margin-left: 1.1em;
-    margin-right: 1.1em;
+    justify-content: space-between;
 }
 
 .verhalenSection ul li {
     display: inline-block;
+    margin-bottom: 2em;
 }
 
 .verhalenSection ul li:first-child {
     width: 100%;
+    position: relative;
 }
 
 .verhalenSection ul li:not(:first-child) {
-    flex: 1;
+    width: 48%;
+}
+
+ul li img {
+    height: 100%;
 }
 
 article {
@@ -613,25 +611,9 @@ button:hover {
     display: inline;
 }
 
-.scroll ul {
-    /* display: flex;
-    flex-wrap: nowrap;
-    overflow: auto;
-    -moz-webkit-overflow-scrolling: touch;
-    -moz-webkit-margin-before: 1em;
-    -moz-webkit-margin-after: 1em;
-    -moz-webkit-margin-start: 0;
-    -moz-webkit-margin-end: 0;
-    -moz-webkit-padding-start: 0;
-    overflow-style: -ms-autohiding-scrollbar; */
-}
-
 section {
     max-width: 100vw;
     padding: 1em 2em 1em 2em;
-    /* background-color: white; */
-    box-shadow: inset 0 -0.025rem 0 #e6e6e6;
-    box-shadow: 4px 4px 5px #aaaaaa;
 }
 
 .tabsInloggen:hover {
@@ -1044,10 +1026,10 @@ a:visited {
         width: 100%;
         margin-right: 1em;
     }
-    h3 {
+    /* h3 {
         width: 25rem;
         font-size: 1.5em;
-    }
+    } */
     .comment {
         width: 3em;
         left: 18.5em;
@@ -1221,12 +1203,6 @@ a:visited {
     .sorteren label {
         width: 97%;
     }
-    /* .scroll ul {
-        display: inline-block;
-    }
-    .scroll li {
-        display: inline-block;
-    } */
     fieldset {
         display: inline-block;
         margin-right: 50%;
