--- a/css/style.css
+++ b/css/style.css
@@ -225,13 +225,32 @@ h2 {
 }
 
 h3 {
-    height: 2em;
-    background-color: #0063d3;
-    text-align: center;
+    z-index: 10;
+    position: absolute;
+    left: 0;
+    top: 0;
+    widows: 40%;
     color: white;
-    margin: 0;
-    font-weight: 400;
-    padding-top: 0.3em;
+    margin-left: 1em;
+}
+
+.heroTitle {
+    z-index: 10;
+    position: absolute;
+    left: 0;
+    top: 0;
+    widows: 40%;
+    color: white;
+    margin-left: 1em;
+    font-size: 2.375rem;
+    transform: translateX(1000%);
+    animation: slide-in 1.5s cubic-bezier(.7, .27, .27, 1) .15s both;
+}
+
+@keyframes slide-in {
+    to {
+        transform: translateX(0);
+    }
 }
 
 aside {
@@ -485,7 +504,26 @@ button {
 
 .verhalenSection ul li {
     display: inline-block;
+    position: relative;
+    overflow: hidden;
     margin-bottom: 2em;
+}
+
+.storyCard:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    transition: all 0.8s;
+    opacity: 1;
+    background-color: white;
+    background-size: 100% 100%;
+}
+
+.storyCard:hover:before {
+    opacity: 0.8;
 }
 
 .verhalenSection ul li:first-child {
