--- a/css/style.css
+++ b/css/style.css
@@ -171,10 +171,11 @@ article dl {
 }
 
 .zoeken input[type='text'] {
-    width: 20%;
+    width: 30%;
     padding-left: 1em;
     border-radius: 4px;
     margin-right: 2em;
+    border: none;
 }
 
 .zoeken {
@@ -225,14 +226,15 @@ h2 {
 }
 
 .cardTitle {
-    z-index: 10;
+    z-index: 2;
     position: absolute;
     left: 0;
     top: 0;
-    widows: 40%;
     color: #003082;
-    margin-left: 1em;
+    margin: 1em 1em 1em 1em;
     font-weight: 400;
+    max-width: 100%;
+    font-size: 1em;
 }
 
 .heroTitle {
@@ -268,11 +270,11 @@ aside form {
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     bottom: 0;
     left: 0;
     opacity: 0.95;
-    background-color: #e6b517;
+    background-color: #ffc917;
     overflow-y: hidden;
     transition: all 0.5s ease-out;
 }
@@ -416,12 +418,14 @@ label.oranje {
 }
 
 aside button {
+    z-index: 2;
     position: fixed;
     bottom: 1em;
     right: 7.5em;
-    background-color: #e6b517;
+    background-color: #ffc917;
     color: #003082;
-    box-shadow: 0 -0.125rem 0 #cfa317 inset;
+    box-shadow: 0 -0.125rem 0 #ffb519 inset;
+    border-radius: 4px;
 }
 
 #closeFilter {
@@ -429,7 +433,7 @@ aside button {
     width: 8em;
     right: 3em;
     top: 1.8em;
-    border-radius: 1em;
+    border-radius: 4px;
     color: white;
     background-color: #0063d3;
     box-shadow: inset 0 -0.125rem 0 #005ca0;
@@ -511,6 +515,7 @@ button {
 }
 
 .storyCard:before {
+    pointer-events: none;
     content: "";
     position: absolute;
     top: 0;
@@ -518,13 +523,17 @@ button {
     height: 100%;
     width: 100%;
     transition: all 0.8s;
-    opacity: 1;
+    opacity: .7;
     background-color: white;
     background-size: 100% 100%;
 }
 
 .storyCard:hover:before {
-    opacity: 0.8;
+    opacity: 0;
+}
+
+.storyCard:hover .cardTitle {
+    opacity: 0;
 }
 
 .verhalenSection ul li:first-child {
@@ -533,7 +542,7 @@ button {
 }
 
 .verhalenSection ul li:not(:first-child) {
-    width: 48%;
+    width: 30%;
 }
 
 ul li img {
@@ -566,8 +575,8 @@ ul li img {
 }
 
 .heroflow__overlay--solidBlue {
-    -webkit-animation: fade-in 1.5s cubic-bezier(.7, .27, .27, 1) .15s both;
     animation: fade-in 1.5s cubic-bezier(.7, .27, .27, 1) .15s both;
+    animation-delay: 1.2s;
 }
 
 @keyframes fade-in {
@@ -682,7 +691,7 @@ button:hover {
     color: #fff;
     text-decoration: none;
     cursor: pointer;
-    box-shadow: inset 0 -3.125rem 0 #cfa317;
+    box-shadow: inset 0 -4.9rem 0 #ffb519;
 }
 
 .geslacht {
