--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ header {
 }
 
 .yellow-section {
-    padding: 1em 2em 1em 2em;
+    padding: 2em 2em 1em 2em;
     margin-top: 0;
     display: block;
     max-width: 100vw;
@@ -83,13 +83,14 @@ main {
     height: 75%;
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     left: 0;
     background-color: white;
     overflow-y: hidden;
     transition: 0.5s;
     box-shadow: 4px 4px 5px #aaaaaa;
+    margin-top: 3em;
 }
 
 .aanmelden form {
@@ -240,7 +241,7 @@ h2 {
 }
 
 .heroTitle {
-    z-index: 10;
+    z-index: 5;
     position: absolute;
     left: 0;
     top: 0;
@@ -271,7 +272,7 @@ aside form {
     height: 100%;
     width: 100%;
     position: fixed;
-    z-index: 3;
+    z-index: 100;
     bottom: 0;
     left: 0;
     opacity: 0.95;
@@ -676,6 +677,7 @@ article {
     text-align: center;
     line-height: 1.5625rem;
     font-size: 1rem;
+    border-radius: 4px;
     border: none;
     text-decoration: none;
     transition: box-shadow .15s ease-in-out;
@@ -742,14 +744,6 @@ form label {
     width: 20em;
 }
 
-.inloggen form {
-    margin-left: 2em;
-}
-
-.aanmelden form {
-    margin-left: 2em;
-}
-
 .formInput {
     height: 2.8125rem;
     line-height: 1.5625rem;
@@ -759,11 +753,12 @@ form label {
     background-color: transparent;
     border-color: #0063d3;
     border-style: solid;
-    width: 20em;
+    width: 80%;
     color: #003082;
     text-overflow: ellipsis;
     padding-left: 1em;
-    margin-right: 40%;
+    padding-right: 1em;
+    ;
 }
 
 form input[type="email"]:valid {
@@ -799,6 +794,7 @@ form input[type="password"]:invalid {
     background-color: #e6b517;
     color: #003082;
     box-shadow: 0 -0.125rem 0 #cfa317 inset;
+    border-radius: 4px;
     width: 15em;
     height: 3em;
     border-style: solid;
@@ -1094,7 +1090,7 @@ a:visited {
     .zoeken input[type='submit'] {
         min-width: 5em;
     }
-    input[type="text"] {
+    .zoeken input[type="text"] {
         min-width: 11.5em;
     }
     .verhalenSection ul {
@@ -1107,7 +1103,28 @@ a:visited {
         font-size: .8em;
     }
     .heroTitle {
-        font-size: 1.5rem;
+        font-size: 1em;
+    }
+}
+
+@media (min-width: 420px) {
+    .zoeken input[type='submit'] {
+        min-width: 5em;
+    }
+    .zoeken input[type="text"] {
+        min-width: 11.5em;
+    }
+    .cardTitle {
+        font-size: 1.2em;
+    }
+    .heroTitle {
+        font-size: 1.6em;
+    }
+}
+
+@media (min-width: 680px) {
+    .heroTitle {
+        font-size: 2em;
     }
 }
 
@@ -1116,7 +1133,7 @@ a:visited {
         width: 5em;
     }
     .zoeken input[type='submit'] {
-        width: 10%;
+        width: 15%;
     }
     #inlogKnop {
         width: 3em;
@@ -1165,8 +1182,8 @@ a:visited {
         font-size: 1.5rem;
     }
     #filterButton {
-        height: 3em;
-        min-width: 10em;
+        height: 2.5em;
+        min-width: 8em;
         font-size: 1.5rem;
         bottom: 1em;
         transform: translateX(-50%);
@@ -1176,16 +1193,20 @@ a:visited {
         display: block;
     }
     .inlogPlek {
-        height: 50%;
+        height: 70%;
+        padding-top: 2em;
+        margin-top: 4.8em;
     }
     .hidden {
-        height: 0%;
+        height: 0;
+        width: 0;
     }
     .hiddenDisplay {
         display: none;
     }
     .inloggen form,
     .aanmelden form {
+        padding: 0.5em 0.5em 0.5em 3em;
         font-size: 1.5em;
     }
     fieldset {
@@ -1266,9 +1287,34 @@ a:visited {
         max-width: 95%;
         margin-top: 2em;
     }
+    .verhalenSection ul li:not(:first-child) {
+        width: 47%;
+    }
+    .cardTitle {
+        font-size: 1.5em;
+    }
+    .heroTitle {
+        font-size: 2.5em;
+    }
+    .yellow-section {
+        height: 15em;
+        margin-bottom: -13em;
+    }
 }
 
 @media (min-width: 1440px) {
+    .verhalenSection ul li:not(:first-child) {
+        width: 30%;
+    }
+    .cardTitle {
+        font-size: 1.2em;
+    }
+    .heroTitle {
+        font-size: 4em;
+    }
+    .yellow-section {
+        padding-right: 17em;
+    }
     .verhalenSection {
         margin-left: 15em;
         margin-right: 15em;
